@@ -7,6 +7,11 @@ This file includes a list of high level updates for each milestone release.
 Milestone 82
 
 <Insert new notes here- top is most recent.>
+
+  * Remove CGFontRef parameter from SkCreateTypefaceFromCTFont.
+    Use CTFontManagerCreateFontDescriptorFromData instead of
+    CGFontCreateWithDataProvider to create CTFonts to avoid memory use issues.
+
   * Added SkAndroidCodec::getICCProfile for reporting the native ICC profile of
     an encoded image, even if it doesn't map to an SkColorSpace.
 
